feat : 개인서버 올라마로 모델변경