@@ -1,14 +1,13 @@
 package bible.bible.service;
 
 import bible.bible.domain.CleanBotResult;
-import bible.bible.domain.Gemini.GeminiRequest;
+import bible.bible.domain.Message;
+import bible.bible.domain.OllamaRequest;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import java.util.Base64;
-import java.util.List;
-import org.springframework.beans.factory.annotation.Value;
+import java.util.Collections;
 import org.springframework.stereotype.Service;
-import org.springframework.web.client.HttpClientErrorException;
 import org.springframework.web.client.RestTemplate;
 import org.springframework.web.multipart.MultipartFile;
 
@@ -18,8 +17,6 @@ public class CleanBotService {
     private final RestTemplate restTemplate;
     private final ObjectMapper objectMapper;
 
-    @Value("${gemini.api.key}")
-    private String apiKey;
 
     public CleanBotService(RestTemplate restTemplate, ObjectMapper objectMapper) {
         this.restTemplate = restTemplate;
@@ -27,70 +24,54 @@ public class CleanBotService {
     }
 
     public CleanBotResult checkContent(String userText) {
-        // 모델명: Gemini 2.5 Flash
-        String url = "https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent?key="
-                + apiKey;
 
+        String url = "http://129.154.53.65:11434/api/chat";
         String prompt = "너는 게시판 관리자야. 다음 텍스트를 분석해.\n" +
                 "텍스트: \"" + userText + "\"\n" +
                 "공격적이거나 비속어가 있는지 판단해서 무조건 다음 JSON 형식으로만 답해(마크다운 backtick 없이):\n" +
                 "{ \"isSafe\": boolean, \"reason\": string }\n" +
+                "reason은 한국어로만 대답해." +
                 "안전하다면 reason은 '건전한 게시글입니다'라고 써.";
 
         try {
-            GeminiRequest request = new GeminiRequest(prompt);
+            Message message = new Message("user", prompt);
+            OllamaRequest request = new OllamaRequest("llama3.2", Collections.singletonList(message));
 
             String responseString = restTemplate.postForObject(url, request, String.class);
-
             JsonNode root = objectMapper.readTree(responseString);
-            String text = root.path("candidates").get(0)
-                    .path("content").path("parts").get(0)
-                    .path("text").asText();
+            String content = root.path("message").path("content").asText();
 
-            text = text.replace("```json", "").replace("```", "").trim();
-
-            return objectMapper.readValue(text, CleanBotResult.class);
-
-        } catch (HttpClientErrorException e) {
-            throw new RuntimeException("Google API 호출 실패: " + e.getResponseBodyAsString());
+            return objectMapper.readValue(content, CleanBotResult.class);
         } catch (Exception e) {
             e.printStackTrace();
-            throw new RuntimeException("알 수 없는 오류: " + e.getMessage());
+            throw new RuntimeException("Llama API 호출 실패: " + e.getMessage());
         }
     }
 
 
     public CleanBotResult checkImage(MultipartFile file) {
-        String url = "https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent?key="
-                + apiKey;
 
+        String url = "http://129.154.53.65:11434/api/chat";
         try {
             String base64Image = Base64.getEncoder().encodeToString(file.getBytes());
-            String mimeType = file.getContentType();
+            String promptText = "이 이미지가 게시판에 올리기에 안전한지 분석해.\n" +
+                    "선정적이거나 폭력적이거나 혐오스러운 요소가 있는지 확인해.\n" +
+                    "결과는 무조건 JSON { \"isSafe\": boolean, \"reason\": string } 으로 답해.\n" +
+                    "reason은 한국어로만 대답해.";
 
-            String promptText = "이 이미지가 게시판에 올리기에 안전한지 분석해. " +
-                    "선정적이거나 폭력적이거나 혐오스러운 요소가 있는지 확인해. " +
-                    "결과는 무조건 JSON { \"isSafe\": boolean, \"reason\": string } 으로 답해.";
+            Message message = new Message("user", promptText, Collections.singletonList(base64Image));
 
-            GeminiRequest request = new GeminiRequest();
-
-            GeminiRequest.Part textPart = new GeminiRequest.Part(promptText);
-            GeminiRequest.Part imagePart = new GeminiRequest.Part(new GeminiRequest.InlineData(mimeType, base64Image));
-
-            GeminiRequest.Content content = new GeminiRequest.Content(List.of(textPart, imagePart));
-
-            request.setContents(List.of(content));
+            OllamaRequest request = new OllamaRequest("llava-phi3", Collections.singletonList(message));
 
             String responseString = restTemplate.postForObject(url, request, String.class);
-
             JsonNode root = objectMapper.readTree(responseString);
-            String text = root.path("candidates").get(0).path("content").path("parts").get(0).path("text").asText();
-            text = text.replace("```json", "").replace("```", "").trim();
-            return objectMapper.readValue(text, CleanBotResult.class);
+            String content = root.path("message").path("content").asText();
+
+            return objectMapper.readValue(content, CleanBotResult.class);
 
         } catch (Exception e) {
             e.printStackTrace();
-            throw new RuntimeException("이미지 분석 실패: " + e.getMessage());
+            throw new RuntimeException("llava-phi3 이미지 분석 실패: " + e.getMessage());
         }
     }
 }
